# filter_dns

./: .gitignore  CMakeLists.txt  README.md
devcontainer/: Fluentbit-Dockerfile  compose.yaml  env.default
src/: filter_dnslookup.c
